--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
     "backpat": "^0.6.3",
+    "bower": "^1.8.0",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
     "css-loader": "^0.26.1",
@@ -69,6 +70,7 @@
     "node-sass": "^4.2.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
