--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.1",
