--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "semantic-ui-react": "^0.64.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "websocket": "^1.0.24"
   }
 }
