added form elements to front page welcome login

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
     "css-loader": "^0.26.1",
+    "dotenv": "^4.0.0",
     "eslint": "^3.13.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
@@ -68,6 +69,7 @@
     "jsdom": "^9.9.1",
     "mocha": "^3.2.0",
     "node-sass": "^4.2.0",
+    "nodemon": "^1.11.0",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.7",
